--- a/style.css
+++ b/style.css
@@ -1,3 +1,41 @@
 body{
     background: white;
 }
+
+p{
+    color: rgba(6, 6, 158, 0.801);
+    
+    width:600px;
+  
+    margin:5%;
+  font-family: Helvetica Neue;
+  
+  padding: 0 px
+
+}
+p#bio{
+text-align: center;
+width:600px;
+margin-left: 5%;
+    
+}
+
+img{
+display: block;
+position: absolute;
+right: 40px;
+top: 70px;
+width: 35%;
+border:3px solid;
+
+      }
+    
+      h3{
+        margin-left: 10%;
+        
+        left: 40px;
+        
+        }
+
+        
+
